--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,23 @@ services:
       volumes:
         - postgres_data:/var/lib/postgresql/data/
       environment:
-        - "POSTGRES_HOST_AUTH_METHOD=trust"
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+      ports:
+        - 5432:5432
+      restart: always
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: ecom_db_admin
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: root@ecom.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
 
   web:
     build: .
@@ -19,3 +35,4 @@ services:
 
 volumes:
   postgres_data:
+  pgadmin-data:
