--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
-    container_name: ecom_db_admin
     restart: always
     ports:
       - "5050:80"
@@ -29,7 +28,7 @@ services:
       - "8000:8000"
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/code 
+      - .:/ecom_app 
     depends_on:
       - db
 
